Re-enable media query API test

Remove the remaining images tests that used the JS setColorProfile API, and
re-enable the media query API test.

The media query picture test needs rebaselineing and is in a separate patch.

TBR=enne (for the not-lazy solution)
TBR=avi (for content/)
BUG=731783

Review-Url: https://codereview.chromium.org/2936163002
Cr-Commit-Position: refs/heads/master@{#479310}

Former-commit-id: 188ad8e21510e3e8ff10465711c11a13a28936f3